[gd_scene load_steps=5 format=3 uid="uid://brflj6qrfk56h"]

[ext_resource type="Script" path="res://Scenes/member_party_view.gd" id="1_6n7dc"]
[ext_resource type="SpriteFrames" uid="uid://d3olyls4guup1" path="res://Assets/Character/Full Body/Character Animations.tres" id="1_lvb3c"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_213go"]
bg_color = Color(0, 0, 0, 0.431373)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_no2dq"]
bg_color = Color(0, 0.603922, 0.180392, 1)

[node name="MemberPartyView" type="Control"]
custom_minimum_size = Vector2(64, 219)
layout_mode = 3
anchor_right = 0.05
anchor_bottom = 0.304167
script = ExtResource("1_6n7dc")
metadata/_edit_use_anchors_ = true

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.365297
anchor_right = 0.75
anchor_bottom = 0.383562
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_213go")
theme_override_styles/fill = SubResource("StyleBoxFlat_no2dq")
fill_mode = 1
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="MemberSprite" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(32, 143)
scale = Vector2(3.29412, 3.29412)
sprite_frames = ExtResource("1_lvb3c")
animation = &"Thief"
frame_progress = 0.726746
